Semantic/src/test_cases/Error/test25.cl
-- Main class not defined
 
(* The following error is generated 
    
    test25.cl:1: 'Main' class is not present in the program.

*)
class A {
    a : Int;
};
class B {
    b : String;
};
class C {
    c : Bool;
};